fix alignment of home page hero

--- a/css/style.css
+++ b/css/style.css
@@ -7618,7 +7618,8 @@ header {
     padding-right: 0; }
   .hero img {
     max-width: 100%;
-    height: auto; }
+    height: auto;
+    margin: 0 auto; }
 
 .banner-link {
   display: none;
